@@ -1,6 +1,8 @@
 0.9.0 (unreleased)
 -----
 
+- Improved default app_path to include entire application code for Lumen, excluding vendor.
+
 0.8.0
 -----
 
